assets/css/style.css
/* 

headings and backgrounds: #4aaaa5
regular font color: #777777
main header background color: #ffffff
main header border color: #cccccc
footer background color: #666666
main content background color: #ffffff
main content border color: #dddddd

heading fonts: font-family: 'Georgia', Times, Times New Roman, serif;
all other fonts: font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;

*/

body {
    background-image: url(./../images/spikes/spikes.png);
    background-repeat: repeat;
    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
    color: #777;
    width: 100%;
    height: 100%;
}

.header {
    display: flex;
    justify-content: flex-start;
    height: 78px;
    width: 100%;
    background-color: #fff;
    border: 1px solid #ddd;
    margin-bottom: 20px;
}


nav {
    margin: auto;
    width: 960px;
}

button {
    height: 100%;
}

.navbar-brand {
    background-color: #4aaaa5;
    color: #fff;
    font-family: 'Georgia', Times, 'Times New Roman', serif;
    font-weight: bold;
    font-size: 32px;
    padding: 10px;
}

.nav-link {
    color: #999;
}

a:hover {
    color: #ddd;
}

.navlist {
    margin-left: 350px;
}

.container {
    width: 960px;
    background-color: #fff;
    border: 1px solid #ddd;
}

h1 {
    font-family: 'Georgia', Times, 'Times New Roman', serif;
    font-weight: bold;
    color: #4aaaa5;
    padding: 20px;
    margin-bottom: -10px;
}

hr {
    padding: 0px 20px 10px 20px;
    margin-top: -10px;
}

footer {
    width: 100%;
    border-top: 8px solid #4aaaa5;
    color: #fff;
    background-color: #666;
    text-align: center;
}

form {
    padding: 20px 20px 0px 20px;
}

input {
    width: 100%;
    margin-top: -10px;
    margin-bottom: 8px;
}

textarea {
    width: 100%;
    height: 200px;
    margin-top: -8px;
}

#submit {
    width: 100px;
    background-color: #4aaaa5;
    color: #ffffff;
    border: none;
    padding: 10px;
    font-size: 16px;
    margin-top: 10px;
}


@media screen and (max-width: 640px) {

}

@media screen and (max-width: 768px) {

}

@media screen and (max-width: 980px) {

}

